--- a/pitch.css
+++ b/pitch.css
@@ -1,3 +1,9 @@
+.reveal {
+    background-color: #eee;
+}
+.reveal h1, .reveal h2, .reveal h3, .reveal h4, .reveal h5, .reveal h6 {
+    color: #000066;    
+}
 span.caption {
     font-size: 12px;
 }
